--- a/.gitmodules
+++ b/.gitmodules
@@ -21,4 +21,4 @@
 	url = https://github.com/GreyGnome/PinChangeInt.git
 [submodule "projects/libraries/Clock"]
 	path = projects/libraries/Clock
-	url = https://github.com/Megunolink/Clock.git
+	url = https://github.com/eddyst/Clock.git
